Окно для экспорта меток с выбором формата и настроек

--- a/SASPlanet.104.dproj
+++ b/SASPlanet.104.dproj
@@ -2010,6 +2010,10 @@
         <DCCReference Include="Src\MarksDB\GUI\frm_MarksExplorer.pas">
             <Form>frmMarksExplorer</Form>
         </DCCReference>
+        <DCCReference Include="Src\MarksDB\GUI\frm_MarksExport.pas">
+            <Form>frmMarksExport</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <DCCReference Include="Src\MarksDB\GUI\frm_MarksExportConfig.pas">
             <Form>frmMarksExportConfig</Form>
         </DCCReference>
@@ -2778,6 +2782,7 @@
         <DCCReference Include="Src\Vector\i_AppearanceOfMarkFactory.pas"/>
         <DCCReference Include="Src\Vector\i_AppearanceOfVectorItem.pas"/>
         <DCCReference Include="Src\Vector\i_Category.pas"/>
+        <DCCReference Include="Src\Vector\i_ExportConfig.pas"/>
         <DCCReference Include="Src\Vector\i_ExportMarks2KMLConfig.pas"/>
         <DCCReference Include="Src\Vector\i_ImportConfig.pas"/>
         <DCCReference Include="Src\Vector\i_JpegWithExifImportConfig.pas"/>
