--- a/SASPlanet.104.dproj
+++ b/SASPlanet.104.dproj
@@ -1615,6 +1615,7 @@
         <DCCReference Include="Src\MainForm\FavoriteMapSet\u_FavoriteMapSetHotKeyList.pas"/>
         <DCCReference Include="Src\MainForm\FavoriteMapSet\u_FavoriteMapSetItemStatic.pas"/>
         <DCCReference Include="Src\MainForm\FavoriteMapSet\u_FavoriteMapSetMenu.pas"/>
+        <DCCReference Include="Src\MainForm\MapHintWindow\u_MapHintWindow.pas"/>
         <DCCReference Include="Src\MainForm\MergePolygons\fr_MergePolygons.pas">
             <Form>frMergePolygons</Form>
             <DesignClass>TFrame</DesignClass>
