--- a/SASPlanet.104.dproj
+++ b/SASPlanet.104.dproj
@@ -2873,6 +2873,7 @@
         <DCCReference Include="Src\t_GeoTypes.pas"/>
         <DCCReference Include="Src\u_AnsiStr.pas"/>
         <DCCReference Include="Src\u_BitmapFunc.pas"/>
+        <DCCReference Include="Src\u_Clipper.pas"/>
         <DCCReference Include="Src\u_FileSystemFunc.pas"/>
         <DCCReference Include="Src\u_GR32Func.pas"/>
         <DCCReference Include="Src\u_GeoFunc.pas"/>
