--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -2676,6 +2676,7 @@
         <DCCReference Include="Src\t_GeoTypes.pas"/>
         <DCCReference Include="Src\u_AnsiStr.pas"/>
         <DCCReference Include="Src\u_BitmapFunc.pas"/>
+        <DCCReference Include="Src\u_Clipper.pas"/>
         <DCCReference Include="Src\u_FileSystemFunc.pas"/>
         <DCCReference Include="Src\u_GR32Func.pas"/>
         <DCCReference Include="Src\u_GeoFunc.pas"/>
