2915: Отображение площади и периметра полигона при редактиовании (настройки в гуй пока не проброшены)

--- a/SASPlanet.110.dproj
+++ b/SASPlanet.110.dproj
@@ -1589,6 +1589,7 @@
         <DCCReference Include="Src\MapLayers\WindowLayers\Polygon\i_PolyLineLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\WindowLayers\Polygon\i_PolygonLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\WindowLayers\Polygon\u_MapLayerPointsSet.pas"/>
+        <DCCReference Include="Src\MapLayers\WindowLayers\Polygon\u_MapLayerPolygonCaptions.pas"/>
         <DCCReference Include="Src\MapLayers\WindowLayers\Polygon\u_MapLayerSingleGeometry.pas"/>
         <DCCReference Include="Src\MapLayers\WindowLayers\Polygon\u_PolyLineLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\WindowLayers\Polygon\u_PolygonLayerConfig.pas"/>
@@ -1642,6 +1643,7 @@
         <DCCReference Include="Src\MapLayers\i_MarkPolyLineLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\i_MarkPolygonLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\i_PointCaptionsLayerConfig.pas"/>
+        <DCCReference Include="Src\MapLayers\i_PolygonCaptionsLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\i_UseTilePrevZoomConfig.pas"/>
         <DCCReference Include="Src\MapLayers\i_VectorItemDrawConfig.pas"/>
         <DCCReference Include="Src\MapLayers\u_KmlLayerConfig.pas"/>
@@ -1652,6 +1654,7 @@
         <DCCReference Include="Src\MapLayers\u_MarkPolygonLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\u_PointCaptionsLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\u_PointsSetLayerConfig.pas"/>
+        <DCCReference Include="Src\MapLayers\u_PolygonCaptionsLayerConfig.pas"/>
         <DCCReference Include="Src\MapLayers\u_UseTilePrevZoomConfig.pas"/>
         <DCCReference Include="Src\MapLayers\u_VectorItemDrawConfig.pas"/>
         <DCCReference Include="Src\MapType\frm_MapTypeEdit.pas">
