--- a/Test/SASPlanetTests.dproj
+++ b/Test/SASPlanetTests.dproj
@@ -202,6 +202,7 @@
         <DCCReference Include="u_SASTestCase.pas"/>
         <DCCReference Include="u_UpdateChecker_Test.pas"/>
         <DCCReference Include="u_VectorItmesFactorySimple_Test.pas"/>
+        <DCCReference Include="u_ProjectionType_Test.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
