--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -1780,6 +1780,7 @@
         <DCCReference Include="Src\Vcl\u_WindowPositionConfig.pas"/>
         <DCCReference Include="Src\VectorLoaders\i_XmlVectorObjects.pas"/>
         <DCCReference Include="Src\VectorLoaders\u_CsvParser.pas"/>
+        <DCCReference Include="Src\VectorLoaders\u_GeoJsonParser.pas"/>
         <DCCReference Include="Src\VectorLoaders\u_HlgParser.pas"/>
         <DCCReference Include="Src\VectorLoaders\u_KmzInfoSimpleParser.pas"/>
         <DCCReference Include="Src\VectorLoaders\u_MpSimpleParser.pas"/>
