Рефакторинг создания TDownloaderFactory

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -1176,6 +1176,7 @@
         <DCCReference Include="Src\Network\u_DownloadUIConfig.pas"/>
         <DCCReference Include="Src\Network\u_DownloaderByCurlFactory.pas"/>
         <DCCReference Include="Src\Network\u_DownloaderByWinInetFactory.pas"/>
+        <DCCReference Include="Src\Network\u_DownloaderFactory.pas"/>
         <DCCReference Include="Src\Network\u_DownloaderHttpBase.pas"/>
         <DCCReference Include="Src\Network\u_DownloaderHttpByCurl.pas"/>
         <DCCReference Include="Src\Network\u_DownloaderHttpByWinInet.pas"/>
