3905: Расширение возможностей темплейтов для формирования URL:
  - добавил поддержку простых математических операций над x,y,z
  - добавил возможность задать значения ServerNames прямо в шаблоне

--- a/SASPlanet.dproj
+++ b/SASPlanet.dproj
@@ -1233,6 +1233,7 @@
         <DCCReference Include="Src\PascalScript\i_PascalScriptLogger.pas"/>
         <DCCReference Include="Src\PascalScript\i_PascalScriptTileCache.pas"/>
         <DCCReference Include="Src\PascalScript\t_PascalScript.pas"/>
+        <DCCReference Include="Src\PascalScript\u_MathExpressionEvaluator.pas"/>
         <DCCReference Include="Src\PascalScript\u_PSExecEx.pas"/>
         <DCCReference Include="Src\PascalScript\u_PSPascalCompilerEx.pas"/>
         <DCCReference Include="Src\PascalScript\u_PascalScriptBase64.pas"/>
